src/modules/base/list/list.css
/**
 * BSD 3-Clause License
 *
 * Copyright (c) 2021, Avonni Labs, Inc.
 * All rights reserved.
 *
 * Redistribution and use in source and binary forms, with or without
 * modification, are permitted provided that the following conditions are met:
 *
 * - Redistributions of source code must retain the above copyright notice, this
 *   list of conditions and the following disclaimer.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 *   this list of conditions and the following disclaimer in the documentation
 *   and/or other materials provided with the distribution.
 *
 * - Neither the name of the copyright holder nor the names of its
 *   contributors may be used to endorse or promote products derived from
 *   this software without specific prior written permission.
 *
 * THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS"
 * AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE
 * IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE
 * DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT HOLDER OR CONTRIBUTORS BE LIABLE
 * FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL
 * DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
 * SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER
 * CAUSED AND ON ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY,
 * OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
 * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 */

.list-item {
    height: fit-content;
}

.sortable-item {
    cursor: grab;
}

/* Disable the hover on touch */
@media (hover: hover) {
    .sortable-item:hover {
        background-color: var(--lwc-colorBackground, #f3f2f2);
    }
}

.sortable-item > div {
    width: 100%;
}

.expanded-item > div {
    width: 100%;
}

.sortable-item_moved {
    transition: transform 300ms;
}

.sortable-item.sortable-item_dragged {
    position: relative;
    z-index: 1;
    border: none;
    box-shadow: 0 0 10px rgb(0 0 0 / 40%);
    opacity: 0.8;
    cursor: grabbing;
    background-color: rgba(255, 255, 255, 0.6);
}

img {
    position: absolute;
    height: 100%;
    object-fit: cover;
}

.image-container {
    position: relative;
    overflow: hidden;
    height: 100%;
}

